RESOLVED FIXED 236856
ASSERTION FAILED: !hasAnyOpenConnections() in UniqueIDBDatabase::~UniqueIDBDatabase()
https://bugs.webkit.org/show_bug.cgi?id=236856
Summary ASSERTION FAILED: !hasAnyOpenConnections() in UniqueIDBDatabase::~UniqueIDBDa...
Sihui Liu
Reported 2022-02-18 12:40:53 PST
...
Attachments
Patch (3.66 KB, patch)
2022-02-18 12:47 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2022-02-18 12:47:09 PST
Chris Dumez
Comment 2 2022-02-18 16:49:47 PST
Comment on attachment 452563 [details] Patch r=me
Aakash Jain
Comment 3 2022-02-18 17:22:34 PST
http/wpt/push-api/onpush-disabled.html failure in https://ews-build.webkit.org/#/builders/70/builds/728 is a false positive. please ignore.
Sihui Liu
Comment 4 2022-02-18 17:52:08 PST
(In reply to Aakash Jain from comment #3) > http/wpt/push-api/onpush-disabled.html failure in > https://ews-build.webkit.org/#/builders/70/builds/728 is a false positive. > please ignore. Yes, it's unlikely my patch causes the failure. Thank you!
EWS
Comment 5 2022-02-18 20:04:06 PST
Found 1 new test failure: http/wpt/push-api/onpush-disabled.html
EWS
Comment 6 2022-02-18 23:23:59 PST
Committed r290200 (247528@main): <https://commits.webkit.org/247528@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452563 [details].
Radar WebKit Bug Importer
Comment 7 2022-02-18 23:24:18 PST
Note You need to log in before you can comment on or make changes to this bug.